---- Changes since 1.160 ----
First version of this module, which can backup the configuration files of other Webmin modules.
---- Changes since 1.220 ----
Added checkboxes to control if the Webmin config file for the target modules (in /etc/webmin) and the actual server config files (like httpd.conf) are included in each backup.
Added a button on the Edit Backup page to execute it immediately.
Extra files to include in each backup that are not associated with any module can now be manually entered.
---- Changes since 1.290 ----
Made the backup email contents translatable.
---- Changes since 1.320 ----
Added a warning if % is used in filenames but strftime substition is not enabled.
---- Changes since 1.330 ----
Added tabs to reduce the size of the main page.
---- Changes since 1.390 ----
When a directory is entered as an additional path to backup, it will be expanded to the list of all files under it when the backup is done.